# FullSpectrumWarriorTHXBOX

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/game/: CMakeLists.txt  main.c
src/game/d3d8/se/: d3ddev.c
src/game/dsound/dsound/: dsapi.c  mcpapu.c
src/game/fsw/ai/: aidebug.c  caiaction.c  caiactor.c  caibreachmanager.c  caiformation.c  caiformationmanager.c  caigesticulator.c  cailiveformation.c  caimanager.c  caiorator.c  cairesourcemanager.c  cairoommanager.c  cairspmanager.c  cairuleshelper.c  caiscanner.c  caiteamavoider.c  caituning.c
src/game/fsw/camera/: camera.c  cameraaftereffects.c  camerablend.c  cameradeath.c  cameradebugvehicle.c  cameradocucam.c  cameraflyby.c  cameraflybyphysics.c  camerafreeflight.c  camerainterpolate.c  cameramain.c  cameramanager.c  cameramisc.c  cameraphysics.c  cameraprecisionfire.c  cameratune.c  cameratuneclear.c  cameravehicle.c  camerawindow.c
src/game/fsw/cinematics/: ccinemaelement.c  ccinemaplayelement.c  ccinematic.c  ceventanimsetptr.c  ceventcinematic.c  cidlecinematic.c  cincidentalcinematic.c  coldcinemaelement.c  congoingdialog.c
src/game/fsw/debug/: ccrashdisplay.c  cinitsyncmanager.c  debugdraw.c
src/game/fsw/effects/: cbirdemitter.c  cbodychunks.c  cbulletstreak.c  ccameragfx.c  cdeadguy.c  cdecalbuffer.c  cdecalmanager.c  cdistantbird.c  cemitter.c  cexplosion.c  cfly.c  cfogofwar.c  cgnat.c  claseraim.c  cleaves.c  cparticlestorm.c  cratemitter.c  cscreenbloom.c  cscreennoise.c  cshellcase.c  csimpleshadow.c  ctumbleweed.c  cvoxel.c  cwater.c  fscope.c  ptree.c  stdparse.c  tbuf.c  vnode.c
src/game/fsw/gameobject/: animobject.c  gameobject.c  gameobjectfactory.c  windowobject.c
src/game/fsw/hud/: hud.c
src/game/fsw/input/: inputcallbackmanager.c  inputsysdefs.c  inputsysmanager.c  inputsysmapdescription.c  inputsysmapmanager.c  inputsysport.c  inputsysrumble.c
src/game/fsw/loadsave/: ccampaign.c  ccampaignmanager.c  cdiskspacemanager.c  cfilemanager.c  cloadsave.c  cprofile.c  cprofilemanager.c  creplaysavemanager.c
src/game/fsw/main/: capplicationcontext.c  capplicationmanager.c  cleanuphandler.c  gameworld.c  inithandler.c  loadpak.c  mainxbox.c  malloc.c  missionhandler.c  settings.c  splashscreen.c
src/game/fsw/managers/: cachemanager.c  cbulletmanager.c  ccheatcodemanager.c  ccinematicmanager.c  ccreditsmanager.c  ceffectsmanager.c  cfactionmanager.c  cgamestats.c  cloadsavemanager.c  cprojectilemanager.c  cpropmanager.c  crandommanager.c  creplaymanager.c  (+9 more)
src/game/recomp/: recomp_manual.c  source_manifest.json
(+1060 files in other folders)
